# hasdiff

./: .gitignore  Makefile  cabal.project  flake.nix
hasdiff/: CHANGELOG.md  hasdiff.cabal
hasdiff/app/: hasdiff.hs
hasdiff/lib/: Util.hs
hasdiff/lib/Data/: HasDiff.hs  Resources.hs
