cabal-version:      3.4

name:               hasdiff

-- PVP summary:     +-+------- breaking API changes
--                  | | +----- non-breaking API additions
--                  | | | +--- code changes with no API change
version:            0.1.0.0

-- synopsis:
-- description:

license:            GPL-3.0-only
license-file:       LICENSE
author:             Kosyrev Serge
maintainer:         kosyrev.serge@yandex.ru

category:           Data
build-type:         Simple

-- Extra doc files to be distributed with the package, such as a CHANGELOG or a README.
extra-doc-files:    CHANGELOG.md

common options-and-extensions
    ghc-options: -Wall
    default-extensions:
        AllowAmbiguousTypes
        BangPatterns
        BlockArguments
        ConstraintKinds
        DataKinds
        DeriveFunctor
        DeriveGeneric
        DeriveTraversable
        DerivingVia
        DuplicateRecordFields
        EmptyCase
        ExplicitNamespaces
        FlexibleContexts
        FlexibleInstances
        GADTs
        GeneralisedNewtypeDeriving
        ImportQualifiedPost
        KindSignatures
        LambdaCase
        MultiParamTypeClasses
        MultiWayIf
        NamedFieldPuns
        NoMonomorphismRestriction
        OverloadedLabels
        OverloadedStrings
        PackageImports
        PartialTypeSignatures
        PatternSynonyms
        QuantifiedConstraints
        RankNTypes
        RecordWildCards
        RecursiveDo
        ScopedTypeVariables
        StandaloneDeriving
        TupleSections
        TypeApplications
        TypeFamilies
        TypeOperators
        TypeSynonymInstances
        UndecidableInstances
        UndecidableSuperClasses
        ViewPatterns

library
    import:           options-and-extensions
    default-language: GHC2021
    hs-source-dirs:   lib

    exposed-modules:
                       Data.HasDiff
                       Data.Resources

    build-depends:
        base

      , async
      , containers
      , hcaf
      , mmap
      , optparse-generic
      , quiet
      , reflex
      , reflex-vty
      , text
      , time
      , transformers
      , transformers-except
      , unagi-chan
      , unix
      , vty
      , xxhash-ffi

executable hasdiff
    import:           options-and-extensions
    default-language: GHC2021
    ghc-options:      -threaded -with-rtsopts=-T
    hs-source-dirs:   app
    main-is:          hasdiff.hs

    build-depends:
        base

      , hasdiff
      , hcaf
      , optparse-generic
      , transformers
      , transformers-except
