cabal-version:      3.4

name:               hasdiff

-- PVP summary:     +-+------- breaking API changes
--                  | | +----- non-breaking API additions
--                  | | | +--- code changes with no API change
version:            0.1.0.0

-- synopsis:
-- description:

license:            GPL-3.0-only
license-file:       LICENSE
author:             Kosyrev Serge
maintainer:         kosyrev.serge@yandex.ru

category:           Data
build-type:         Simple

-- Extra doc files to be distributed with the package, such as a CHANGELOG or a README.
extra-doc-files:    CHANGELOG.md

executable hasdiff
    default-language: GHC2021
    ghc-options:      -threaded -with-rtsopts=-T
    hs-source-dirs:   app
    main-is:          hasdiff.hs

    build-depends:
        base

      , async
      , reflex
      , reflex-vty
      , text
      , transformers
      , unagi-chan
      , vty
